--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
   flutter_custom_clippers: ^2.0.0
   font_awesome_flutter: ^9.1.0
   http: ^0.13.3
+  auto_size_text: ^3.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
