--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   http: ^0.13.3
   auto_size_text: ^3.0.0-nullsafety.0
+  html_unescape: ^2.0.0
 
 dev_dependencies:
   flutter_test:
