--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,18 @@ dependencies:
   http: ^0.13.3
   auto_size_text: ^3.0.0-nullsafety.0
   html_unescape: ^2.0.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+# Flutter Icons Config
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/quizsylogo.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
