--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
@@ -34,6 +33,8 @@ dependencies:
   auto_size_text: ^3.0.0-nullsafety.0
   html_unescape: ^2.0.0
   flutter_launcher_icons: ^0.9.2
+  firebase_auth: ^3.1.1
+  google_sign_in: ^5.1.0
 
 dev_dependencies:
   flutter_test:
